<resources>
    <string name="app_name">DemiWatch</string>
    <string name="enter_acc">Masuk ke\nAkun Anda</string>
    <string name="no_acc">Belum memiliki akun?</string>
    <string name="regis_now">Daftar sekarang</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="regis_acc">Daftar Akun\nBaru Anda</string>
    <string name="have_acc">Sudah memiliki akun?</string>
    <string name="login_now">Masuk Sekarang</string>
    <string name="register">Daftar</string>
    <string name="fill_user_profile">Lengkapi Data Diri</string>
    <string name="profile_user">Profile user</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="confrim_password">Konfirmasi Kata Sandi</string>
    <string name="user_relation">Hubungan Dengan Pasien</string>
    <string name="safe_radius_patient">Radius Aman Pasien</string>
    <string name="save">Simpan</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="age">Umur</string>
    <string name="patient_notes">Catatan Pasien</string>
    <string name="watch_id">Kode Unik Perangkat</string>
    <string name="address_home">Nama Alamat Rumah</string>
    <string name="address_destination">Nama Alamat Tujuan</string>
    <string name="invalid_email">Format email anda salah</string>
    <string name="invalid_password">Password setidaknya memiliki 8 karakter</string>
    <string name="fill_data">Tolong lengkapi semua data</string>
    <string name="pass_not_match">Pastikan password yang anda berikan sama</string>
    <string name="complete_register_acc">Akun telah berhasil didaftarkan, silahkan login untuk dapat menggunakan aplikasi</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Selamat datang</string>
    <string name="placeholder_username">Username</string>
    <string name="patient_loc">Lokasi Pasien</string>
    <string name="fill_patient_profile">Lengkapi Data Pasien</string>
    <string name="placeholder_patient_name">Patient Name</string>
    <string name="placeholder_patient_symtomps">Patient Symtomps</string>
    <string name="access_route">Akses Rute</string>
    <string name="patient_list">Daftar Pasien</string>
    <string name="your_patient">Pasien Anda</string>

    <!--    MapBox Token    -->
    <string name="mapbox_access_token">pk.eyJ1Ijoia3Jpc25hZXJsYW5nZ2EwOCIsImEiOiJjbG5yMm1wcGUxMXk4Mm1xamZhNjQ5eDdqIn0.bwDrSFJPaZ9eUaK6JHKYMg</string>
    <!--    MapBox Token    -->

    <string name="placeholder_email">user@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="address_data">Data Alamat</string>
    <string name="placeholder_address_default">Rumah (Default)</string>
    <string name="placeholder_address_destination_default">Tujuan</string>
    <string name="change_address_route">Ubah Alamat Pasien</string>
    <string name="change_address_notes">Anda dapat mengubah alamat rumah dan alamat tujuan perangkat pasien</string>
    <string name="log_out">Log Out</string>
    <string name="check_connection">Pastikan koneksi internet anda baik dan coba buka halaman ini kembali</string>
    <string name="user_registered">Pengguna telah berhasil ditambahkan, silahkan masukkan kembali akun Anda untuk menggunakan aplikasi</string>
    <string name="user_data_registered">Data pengguna telah berhasil ditambahkan</string>
    <string name="patient_data_registered">Data pasien telah berhasil ditambahkan</string>
    <string name="notify_channel_name">Notifikasi Status Pasien</string>

</resources>