<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.fill_profile.user.FillProfileUserActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/textStyleSemiBoldCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/fill_user_profile"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <Button
        android:id="@+id/btn_save"
        style="@style/textStyleButtonWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button_rounded"
        android:elevation="0dp"
        android:paddingVertical="8dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile_user"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_profile_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:shapeAppearanceOverlay="@style/ImageView.Round" />

        <ImageView
            android:id="@+id/btn_edit_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/edit_profile_user" />
    </FrameLayout>

    <EditText
        android:id="@+id/ed_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@drawable/custom_text_field_rounded"
        android:drawablePadding="12sp"
        android:ems="10"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:padding="16dp"
        android:textColorHint="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <EditText
        android:id="@+id/ed_profile_telp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_text_field_rounded"
        android:drawableStart="@drawable/ic_local_phone_24"
        android:drawablePadding="12sp"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:padding="16dp"
        android:textColorHint="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_profile_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_profile_status"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:focusable="false"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_drop_down_background"
        android:ems="10"
        android:maxLines="1"
        android:inputType="text"
        android:paddingBottom="4dp"
        android:textColorHint="@color/dark_grey"
        android:textSize="14sp"
        app:endIconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_profile_telp">

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_drop_down_background"
            android:hint="@string/user_relation"
            android:inputType="none"
            android:padding="12dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/ed_profile_safe_radius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_text_field_rounded"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/safe_radius_patient"
        android:inputType="number"
        android:padding="16dp"
        android:textColorHint="@color/dark_grey"
        android:textSize="14sp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_profile_status" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>